--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+	font-size: 20px;
+	--clr-accent: #7fd1ae;
+}
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	font-family: 'Raleway', sans-serif;
+	letter-spacing: 1.1px;
+	font-size: 1rem;
+	color: #333;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+	background-color: white;
+	/* background: snow; */
+	color: #333;
+}
+
+input, textarea {
+	display: block;
+	background-color: inherit;
+	border: none;
+	padding: .5em .75em;
+}
+
+input:focus, textarea:focus {
+	outline: none;
+	background-color: rgba(0, 0, 0, 0.05);
+}
+input{
+	font-size: 1.1rem;
+}
+
+textarea {
+	resize: none;
+	font-size: .85rem;
 }
